# DroneShield_Core

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: AppStyle.h
src/Backend/: Consts.h  DataStructs.h  devicemanager - 副本.cpp  devicemanager - 副本.h  devicemanager.cpp  devicemanager.h
src/Backend/Drivers/: detectiondriver - 副本.h  detectiondriver.cpp  detectiondriver.h  jammerdriver.cpp  jammerdriver.h  relaydriver.cpp  relaydriver.h  spectrumdriver.cpp  spectrumdriver.h  spoofdriver.cpp  spoofdriver.h
src/Backend/HAL/: httpclient.cpp  httpclient.h  socketioclient.cpp  socketioclient.h  tcpclient.cpp  tcpclient.h  udpsender.cpp  udpsender.h
src/UI/: jammerconfdialog.cpp  jammerconfdialog.h  radarview.cpp  radarview.h  relaydialog.cpp  relaydialog.h  toggleswitch.cpp  toggleswitch.h
src/Utils/: configloader.cpp  configloader.h  crcutils.cpp  crcutils.h
test/: mock_full_system.py  mock_hardware.py  mock_hardware_new.py  mock_interactive.py  requirements.txt  test_control.py  test_detect_full.py  test_detect_step1.py
